# arsonkupik-obs-audio-enhancer

./: .gitattributes  .gitignore  APPLY_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  SUPPORTERS.md  build_dsp_test_only.bat  build_plugin_single_click.bat  check_git_push_size.bat  clean_build_cache.bat  cleanup_repo_before_push.bat  install_plugin_windows.bat  publish_public_repo.bat
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: audio_quality_report.yml  bug_report.yml  config.yml  feature_request.yml
.github/patches/: v0.4.13-hardening.patch.gz.b64  v0.4.13-hardening.patch.gz.b64.part01  v0.4.13-hardening.patch.gz.b64.part02  v0.4.13-hardening.patch.gz.b64.part04
.github/workflows/: apply-v0413-hardening.yml  build-windows-plugin.yml  calibrate-v0414-wow.yml  ci-dsp.yml  ci.yml  p1-v0415-capture.yml  p1-v0415-diagnostics.yml  p1-v0415-engine.yml  p1-v0415-finalize.yml  p1-v0415-pr-applier.yml  p1-v0415-site.yml  pages.yml  release.yml
data/locale/: en-US.ini
docs/: AUDIO_QUALITY.md  AUDIO_TUNING_V0_4.md  BUILD_TROUBLESHOOTING.md  BUILD_WINDOWS.md  CLEAN_SATURN_POLISH_V0_4_2.md  CROSS_PLATFORM_RELEASES.md  ENGINE_PORT_AUDIT.md  FUNDING_POLICY.md  GITHUB_AUTOBUILD.md  MASARI_PARITY_ENGINE_PLAN.md  PRESET_OUTPUT_SMOKE_TEST.txt  PRESET_OUTPUT_SMOKE_TEST_V0_4_3.txt  REAL_WORLD_VALIDATION.md  RELEASE_AUTOMATION.md  RELEASE_WORKFLOW.md  SEO_AND_DISCOVERY.md  SMART_STEREO_INTEGRITY_V2.md  SMOKE_TEST_RESULT.txt  USER_INSTALL.md  V0_4_3_EXTENSION_SMART_MAKEUP.md
docs/internal/: p1-v0415-diagnostics.txt
docs/releases/: latest.md  v0.4.10.md  v0.4.11.md  v0.4.12.md  v0.4.13.md  v0.4.15.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.9.md
docs/site/: downloads.html  index.html  robots.txt  sitemap.xml  styles.css  support.html
include/: arsonkupik_dsp.hpp  arsonkupik_transition.hpp
packaging/windows/: arsonkupik-obs-audio-enhancer.iss
release/: README_INSTALL.txt  install_windows.bat  uninstall_windows.bat
scripts/: build-linux.sh  build-windows-from-obs-release.ps1  build-windows.ps1  find-cmake.bat  package-windows-programdata.ps1  run-dsp-smoke-test.sh
src/: arsonkupik_dsp.cpp  arsonkupik_dsp_macros.cpp  arsonkupik_dsp_processing.cpp  arsonkupik_filter.cpp  arsonkupik_presets.cpp  arsonkupik_transition.cpp
tests/: dsp_hardening_test.cpp  dsp_smoke_test.cpp  preset_transition_test.cpp
